[package]
name = "flame-clustering"
version = "0.2.1"
authors = ["Tony Rippy <tonyrippy@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
description = "Fuzzy clustering by Local Approximation of MEmberships (FLAME)"
readme = "README.md"
keywords = ["clustering"]
categories = ["algorithms"]
repository = "https://github.com/TonyRippy/flame-clustering"

[dependencies]
derivative = "2.2.0"
num-traits = "0.2"

[dev-dependencies]
